--- a/src/index.html
+++ b/src/index.html
@@ -31,17 +31,17 @@
       </header>
       <div class="content">
         <div class="main">
-          <div class="maint__left">
+          <div class="main__content">
             <div class="main__title">
-              <p>Сводка</p>
+              <p class="main__title-text">Сводка</p>
             </div>
-            <div class="main__block">
-
+            <div class="main__block" style="background-image: url('./img/bg@1x.png')">
+              sfsdf
             </div>
           </div>
-          <div class="main__right">
+          <div class="main__content">
             <div class="main__title">
-              <p>Избранные сценарии</p>
+              <p class="main__title-text">Избранные сценарии</p>
               <div class="arrow">
                 тут две стрелочки
               </div>
@@ -52,18 +52,15 @@
           </div>
         </div>
         <div class="bottom-content">
-
         </div>
-
       </div>
-      
-      <footer class="footer">
+    </div>
+    <footer class="footer">
         <a class="footer__link" href="#">Помощь</a>
         <a class="footer__link" href="#">Обратная связь</a>
         <a class="footer__link" href="#">Разработчикам</a>
         <a class="footer__link" href="#">Условия использования</a>
         <p class="footer__text">© 2001–2017  ООО «Яндекс»</p>
-      </footer>
-    </div>
+    </footer>
   </body>
 </html>
