modal without content

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="wrapper">
+  <div class="wrapper blur">
     <div class="layout">
       <header class="header">
         <a href="#" class="logo">
@@ -493,6 +493,48 @@
           <a href="#" class="device-menu__link">Сценарии</a>
         </li>
       </ul>
+    </div>
+  </div>
+
+  <!-- modal  -->
+  <div class="modal">
+    <div class="modal__wrap">
+      <div class="modal__block">
+        <div class="modal__info">
+          <div class="modal__title">
+            <div class="modal__title-main">
+              <div class="modal__title-text">
+                Xiaomi Warm Floor
+              </div>
+              <div class="modal__title-subtext">
+                Включено
+              </div>
+            </div>
+
+            <div class="modal__temperature-info">
+              <div class="modal__temperature-value">
+                +19
+              </div>
+              <div class="modal__icon">
+                <span class="icon-temperature-2"></span>
+              </div>
+            </div>
+          </div>
+          <div class="modal__content">
+            Здесь элемент управления
+          </div>
+        </div>
+
+        <div class="modal__control">
+          <div class="modal__button modal__button_left">
+            Применить
+          </div>
+          <div class="modal__button modal__button_right">
+            Закрыть
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 
