--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="wrapper blur">
+  <div class="wrapper">
     <div class="layout">
       <header class="header">
         <a href="#" class="logo">
