--- a/src/index.html
+++ b/src/index.html
@@ -370,7 +370,7 @@
           </div>
           <div class="fevorite-devices__items">
             <div class="favorite-scroll">
-              <div class="device">
+              <div data-modal="#modal" class="device modal__trigger">
                 <div class="icon icon-sun-2">
                 </div>
                 <div class="device__content">
@@ -497,9 +497,9 @@
   </div>
 
   <!-- modal  -->
-  <div class="modal">
+  <div class="modal modal__bg" id="modal" role="dialog">
     <div class="modal__wrap">
-      <div class="modal__block">
+      <div class="modal__block modal__content">
         <div class="modal__info">
           <div class="modal__title">
             <div class="modal__title-main">
@@ -529,7 +529,7 @@
           <div class="modal__button modal__button_left">
             Применить
           </div>
-          <div class="modal__button modal__button_right">
+          <div class="modal__button modal__button_right modal__close">
             Закрыть
           </div>
         </div>
@@ -540,6 +540,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/modal.js"></script>
 </body>
 
 </html>
