--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
               </div>
               <div class="condition-devices">
                 <div class="condition-scroll">
-                  <div class="device">
+                  <div class="device modal__trigger">
                     <div class="icon icon-sun-2">
                     </div>
                     <div class="device__content">
@@ -88,7 +88,7 @@
                     </div>
                   </div>
 
-                  <div class="device">
+                  <div class="device modal__trigger">
                     <div class="icon icon-sun">
                     </div>
                     <div class="device__content">
@@ -101,7 +101,7 @@
                     </div>
                   </div>
 
-                  <div class="device">
+                  <div class="device modal__trigger">
                     <div class="icon icon-temperature">
                     </div>
                     <div class="device__content">
@@ -114,7 +114,7 @@
                     </div>
                   </div>
 
-                  <div class="device">
+                  <div class="device modal__trigger">
                     <div class="icon icon-sun">
                     </div>
                     <div class="device__content">
@@ -396,7 +396,7 @@
                 </div>
               </div>
 
-              <div class="device">
+              <div class="device modal__trigger">
                 <div class="icon icon-temperature">
                 </div>
                 <div class="device__content">
@@ -409,7 +409,7 @@
                 </div>
               </div>
 
-              <div class="device">
+              <div class="device modal__trigger">
                 <div class="icon icon-sun">
                 </div>
                 <div class="device__content">
@@ -422,7 +422,7 @@
                 </div>
               </div>
 
-              <div class="device">
+              <div class="device modal__trigger">
                 <div class="icon icon-sun-2">
                 </div>
                 <div class="device__content">
@@ -435,7 +435,7 @@
                 </div>
               </div>
 
-              <div class="device">
+              <div class="device modal__trigger">
                 <div class="icon icon-sun">
                 </div>
                 <div class="device__content">
@@ -448,7 +448,7 @@
                 </div>
               </div>
 
-              <div class="device">
+              <div class="device modal__trigger">
                 <div class="icon icon-sun-2">
                 </div>
                 <div class="device__content">
